@@ -1,3 +1,7 @@
+2007-04-18  Paul Brook  <paul@codesourcery.com>
+
+	* config/tc-arm.c (do_t_rsb): Use 16-bit encoding when possible.
+
 2007-04-16  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* config/tc-sh.c (sh_handle_align):  Call as_bad_where instead
